# cocos2d-x_plugin-x

./: .gitignore
plugins/apple_game_center/proj.ios/: AppleGameCenter.h  AppleGameCenter.m
plugins/apple_game_center/proj.ios/PluginGameCenter.xcodeproj/: project.pbxproj
plugins/google_analytics/proj.android/: .project  AndroidManifest.xml  build.xml
plugins/google_analytics/proj.android/src/org/cocos2dx/plugin/: GoogleAnalytics.java
plugins/google_analytics/proj.ios/: GoogleAnalytics.h  GoogleAnalytics.m
plugins/google_analytics/proj.ios/GoogleAnalytics.xcodeproj/: project.pbxproj
plugins/googleplay/proj.android/: .project  ForManifest.xml
plugins/gps_games/proj.android/: .project  AndroidManifest.xml  ForManifest.xml  build.xml  project.properties
protocols/: CMakeLists.txt  PluginManager.cpp
protocols/include/: PluginManager.h  PluginProtocol.h  ProtocolAnalytics.h  ProtocolGameServices.h  ProtocolIAP.h
protocols/platform/android/: PluginFactory.cpp  PluginProtocol.cpp  ProtocolAnalytics.cpp  ProtocolGameServices.cpp  ProtocolIAP.cpp
protocols/platform/ios/: InterfaceGameServices.h  PluginFactory.mm  ProtocolGameServices.mm
protocols/platform/linux/: PluginFactory.cpp  PluginProtocol.cpp  ProtocolAnalytics.cpp  ProtocolGameServices.cpp  ProtocolIAP.cpp
protocols/proj.android/: .project
protocols/proj.android/jni/: Android.mk  Application.mk
protocols/proj.android/src/org/cocos2dx/plugin/: IAPWrapper.java  InterfaceGameServices.java  PluginWrapper.java
tools/: config.sh
(+5 files in other folders)
